# minitorch

./: .gitignore  CMakeLists.txt  pyproject.toml  readme.md
minitorch/: __init__.py  setup.py
minitorch/_C/: __init__.py  binding.pyi
minitorch/_C/include/: base.h  binding.cu
minitorch/_C/include/base/: _dtype.hpp  buffer.hpp  dtype.hpp  memory_allocator.hpp  shape.hpp  slice.hpp  tensor.hpp  type_extension.hpp
minitorch/_C/include/ops/: ops.h
minitorch/_C/include/ops/device/: device.h
minitorch/_C/include/ops/host/: add.hpp  host.h  identity.hpp
minitorch/_C/include/python/: kernel_binding.hpp  tensor_binding.hpp
minitorch/base/: __init__.py  device.py  dtype.py  shape.py  tensorbase.py  types.py
test/_C/: CMakeLists.txt  test_tensor.cu
test/base/: test_shape.py  test_tensorbase.py
